[package]
name = "drakeema-rs"
version = "0.1.0"
authors = ["kedamaDQ <kedama@foresdon.jp>"]
edition = "2018"

[dependencies]
#mastors = { git = "https://github.com/kedamaDQ/mastors", branch = "master" }
chrono = { version = "0.4", features = ["serde"] }
env_logger = { version = "0.7" }
err-derive = { version = "0.2" }
log = { version = "0.4" }
mastors = { path = "../mastors" }
regex = { version = "1.3" }
reqwest = { version = "0.10", features = ["json", "gzip", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
