[package]
name = "drakeema-rs"
version = "0.1.7"
authors = ["kedamaDQ <kedama@foresdon.jp>"]
edition = "2018"
description = "A bot for foresdon.jp"
repository = "https://github.com/kedamaDQ/drakeema-rs/"
license = "MIT OR Apache-2.0"
categories = ["web-programming::http-client"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "2.33" }
env_logger = { version = "0.7" }
err-derive = { version = "0.2" }
feed-rs = { version = "0.4" }
lazy_static = { version = "1.4" }
log = { version = "0.4" }
#mastors = { git = "https://github.com/kedamaDQ/mastors", branch = "master" }
mastors = { path = "../mastors" }
rand = { version = "0.7" }
regex = { version = "1.3" }
reqwest = { version = "0.10", features = ["json", "gzip", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
url = { version = "2.1", features = ["serde"] }
